--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
         </title>
     </head>
     <body>
+        <header>
 
+        </header>
+        <main>
+            
+        </main>
+        <footer>
+            <!-- copyright notice -->
+            <p>
+                © 2025 LMS. All rights reserved.
+            </p>
+        </footer>
     </body>
-    <footer>
-        <!-- copyright notice -->
-        <p>
-            © 2025 LMS. All rights reserved.
-        </p>
-    </footer>
 </html>
